<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="Profile picture"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepic" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_name" />

    <TextView
        android:id="@+id/textview_name"
        style="@style/HeadingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/myname"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_track_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/trackLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/countryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_track_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_country_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_telephone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/phoneNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_email_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_slack_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/slackUserNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_telephone_number_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textview_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/track"
        app:layout_constraintBottom_toBottomOf="@+id/textview_track_label"
        app:layout_constraintStart_toEndOf="@+id/textview_track_label"
        app:layout_constraintTop_toTopOf="@+id/textview_track_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@+id/textview_country_label"
        app:layout_constraintStart_toEndOf="@+id/textview_country_label"
        app:layout_constraintTop_toTopOf="@+id/textview_country_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/textview_email_label"
        app:layout_constraintStart_toEndOf="@+id/textview_email_label"
        app:layout_constraintTop_toTopOf="@+id/textview_email_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/phoneNumber"
        app:layout_constraintBottom_toBottomOf="@+id/textview_telephone_number_label"
        app:layout_constraintStart_toEndOf="@+id/textview_telephone_number_label"
        app:layout_constraintTop_toTopOf="@+id/textview_telephone_number_label" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/slackUsername"
        app:layout_constraintBottom_toBottomOf="@+id/textview_slack_username_label"
        app:layout_constraintStart_toEndOf="@+id/textview_slack_username_label"
        app:layout_constraintTop_toTopOf="@+id/textview_slack_username_label" />

</androidx.constraintlayout.widget.ConstraintLayout>